# sqlite-password-manager

./: .gitignore  CMakeLists.txt  encryption.c  encryption.h  main.c  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  release.yml
include/: database.h  encryption.h
libraries/: shell.c
src/: database.c  encryption.c  main.c
tests/: test_database.c  test_encryption.c
